# git-toggle

./: GitPile.elm  README.md  git-pile.cabal  git-pile.hs  git-toggle.cabal  git-toggle.hs
Git/Pile/: DoWork.hs  PathConstants.hs  PileLib.hs  ReposToWorkOn.hs  Types.hs
Git/Pile/DoWork/: MountGit.hs
Git/Pile/ReposToWorkOn/: GetRepoState.hs  MaybeUtils.hs
Git/Toggle/: ToggleLib.hs
